--- a/assets/sass/components/_spotlight.scss
+++ b/assets/sass/components/_spotlight.scss
@@ -250,7 +250,7 @@
 		.image {
 			@include vendor('flex-grow', '0');
 			@include vendor('flex-shrink', '0');
-			width: 35%;
+			width: 50%;
 			min-width: 25rem;
 			border-radius: 0;
 
@@ -258,9 +258,9 @@
 				@include vendor('object-fit', 'cover');
 				@include vendor('object-position', 'center');
 				display: block;
-				position: absolute;
-				top: 0;
-				left: 0;
+				//position: absolute;
+				//top: 0;
+				//left: 0;
 				width: 100%;
 				height: 100%;
 				border-radius: 0;
