--- a/assets/sass/components/_banner.scss
+++ b/assets/sass/components/_banner.scss
@@ -238,12 +238,14 @@
 		overflow-x: hidden;
 
 		.content {
-			@include padding(_size(padding, default), _size(padding, default));
+		    //@include padding(_size(padding, default), _size(padding, default));
+                        
 			@include vendor('align-self', 'center');
 			@include vendor('flex-grow', '1');
 			@include vendor('flex-shrink', '1');
 			//width: 50%;
 			//max-width: (_size(inner) * 0.75);
+                        padding: 0;
                         height: 60vh;
                         width: 60vh;
                         max-width: 60vh;
