--- a/assets/sass/customize/_liveinfo.scss
+++ b/assets/sass/customize/_liveinfo.scss
@@ -55,4 +55,12 @@ body{
         background-color: rgba(255,255,255,0);
     }
 }
+.raisan.logo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100vw;
+
+}
 
