--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5404,6 +5404,9 @@ body {
   height: 100vh;
   width: 100vw; }
 
+.form {
+  padding: 10vh; }
+
 /* Wrapper */
 #wrapper {
   background-color: inherit;
