--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5407,6 +5407,13 @@ body {
 .form {
   padding: 10vh; }
 
+@media (max-width: 800px) {
+  .youtube {
+    width: 100%;
+    aspect-ratio: 16 / 9; }
+    .youtube iframe {
+      width: 100%;
+      height: 100%; } }
 /* Wrapper */
 #wrapper {
   background-color: inherit;
