--- a/assets/sass/customize/_liveinfo.scss
+++ b/assets/sass/customize/_liveinfo.scss
@@ -68,3 +68,15 @@ body{
     padding: 10vh;
 
 }
+@media (max-width: 800px) {
+    .youtube {
+        width: 100%;
+        aspect-ratio: 16 / 9;
+        iframe {
+            width: 100%;
+            height: 100%;
+          }
+         
+    }
+          
+}
